添加部分声音

--- a/1_1_jiandang3.html
+++ b/1_1_jiandang3.html
@@ -15,7 +15,7 @@
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div class="page  tdc-detail">
+  <div class="page jiandang3 tdc-detail">
     <div class="container">
       <div class="logo"> <img src="./images/tdc_logo.png"> </div>
       <div class="row" id="zlogo">
@@ -37,7 +37,7 @@
 
             <div class=" bodypart">
               <p class="desc typing-ani">
-                <span class="text">集团党委坚持把思想政治理论建设作为加强领导班子建设的核心和灵魂，不断提高两级班子的凝聚力和战斗力。
+                <span class="text">集团公司党委坚持把思想政治理论建设作为加强领导班子和干部队伍建设的核心和灵魂，以创建“好班子”为目标，认真落实《党委中心组学习管理制度》和《干部理论学习管理制度》，定期开展集中研讨交流和现场调研，促进学习成果转化，着力提高领导干部政治理论素养和指导实践能力，真正使集团班子成为能想事、干事、干成事的班子，成为能服众、得人心的班子。
                 </span>
               </p>
             </div>
@@ -99,7 +99,7 @@
           <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
           <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
           <audio id="audio-js"  class="audio-js">
-            <source src="audios/party/2思想建设.ogg" type="audio/ogg" />
+            <source src="audios/zhigong/思想建设.ogg" type="audio/ogg" />
           </audio>
         </div>
       </div>
