--- a/1_1_jiandang4.html
+++ b/1_1_jiandang4.html
@@ -15,7 +15,7 @@
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div class="page  tdc-detail">
+  <div class="page jiandang4 tdc-detail">
     <div class="container">
       <div class="logo"> <img src="./images/tdc_logo.png"> </div>
       <div class="row" id="zlogo">
@@ -37,7 +37,7 @@
 
             <div class=" bodypart">
               <p class="desc typing-ani">
-                <span class="text">集团党委坚持从严治党方针，聚精会神抓党建，推进党建工作目标管理，使党组织活动有载体、有平台、有抓手。
+                <span class="text">集团公司党委坚持从严治党方针，秉承“抓基础、重建设、强能力、有作为”的基本工作思路，从“三会一课”制度抓起，以创先争优、立项攻关为载体，突出问题导向，着力聚焦主责主业，认真落实党建工作责任制；着力推进《铁路企业党支部建设纲要》学习贯彻，注重提升党支部工作质量；着力强化党建工作目标管理，使经营一线党支部建设环境进一步加强。
                 </span>
               </p>
             </div>
@@ -99,7 +99,7 @@
           <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
           <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
           <audio id="audio-js"  class="audio-js">
-            <source src="audios/party/3组织建设.ogg" type="audio/ogg" />
+            <source src="audios/zhigong/组织建设.ogg" type="audio/ogg" />
           </audio>
         </div>
       </div>
