--- a/1_1_jiandang6.html
+++ b/1_1_jiandang6.html
@@ -15,7 +15,7 @@
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div class="page  tdc-detail">
+  <div class="page jiandang6 tdc-detail">
     <div class="container">
       <div class="logo"> <img src="./images/tdc_logo.png"> </div>
       <div class="row" id="zlogo">
@@ -37,7 +37,7 @@
 
             <div class=" bodypart">
               <p class="desc typing-ani">
-                <span class="text">集团党委坚持不懈地抓好“四风”问题的整改，以廉政制度机制建设为基础，形成以制度管控权力、以法律约束行为的清风正气。
+                <span class="text">集团公司党委坚持围绕中心工作，按照局党委、局纪委反腐倡廉建设的部署要求，强化规矩纪律意识，强化反腐倡廉教育，强化权力运行监督，强化源头治理卡控、强化案件查办力度，强化党风廉政建设，以中央八项规定为重点，全面落实总公司18条、路局28条和集团公司12项36条措施，深入推进“一岗双责”，为集团公司转型发展提供坚强的纪律保证。
                 </span>
               </p>
             </div>
@@ -91,7 +91,7 @@
           <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
           <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
           <audio id="audio-js"  class="audio-js">
-            <source src="audios/party/6廉政建设.ogg" type="audio/ogg" />
+            <source src="audios/zhigong/廉政建设.ogg" type="audio/ogg" />
           </audio>
         </div>
       </div>
