--- a/1_1_jiandang8.html
+++ b/1_1_jiandang8.html
@@ -37,7 +37,7 @@
 
             <div class=" bodypart">
               <p class="desc typing-ani">
-                <span class="text">在集团公司“转型发展，二次创业”主战场上，党组织的政治核心作用、党支部的战斗堡垒作用、党员的先锋模范作用得到充分发挥，涌现出一大批先进集体和优秀个人。
+                <span class="text">集团公司党委坚持发挥党组织的政治核心作用、党支部的战斗堡垒作用和党员的先锋模范作用，带领干部职工转变观念、开拓创新，着力打造铁越物流“TDC”、社会服务“TSS”、铁越地产“TRE”三大品牌，在“转型发展，二次创业”主战场上，培育出一大批令人振奋、值得颂扬的先进集体和优秀典型。
                 </span>
               </p>
             </div>
@@ -136,7 +136,7 @@
           <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
           <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
           <audio id="audio-js"  class="audio-js">
-            <source src="audios/party/7典型示范.ogg" type="audio/ogg" />
+            <source src="audios/zhigong/典型示范.ogg" type="audio/ogg" />
           </audio>
         </div>
       </div>
