--- a/1_1_zhigong1.html
+++ b/1_1_zhigong1.html
@@ -15,7 +15,7 @@
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div class="page  tdc-detail">
+  <div class="page zhigong1 tdc-detail">
     <div class="container">
       <div class="logo"> <img src="./images/tdc_logo.png"> </div>
       <div class="row" id="zlogo">
@@ -37,7 +37,7 @@
 
             <div class=" bodypart" style="background: transparent;">
               <p class="desc typing-ani" style="background:transparent">
-                <span class="text">集团工会紧扣“转型发展”这一中心，坚持发挥工会组织作用，增强职工归属感、感恩心，助力集团公司在区域经济和行业领域中塑造崭新的品牌形象。
+                <span class="text">集团公司工会紧扣转型发展这一中心，坚持发挥工会组织作用，以职工代表大会为牵动，着力提升企业民主管理工作；以落实帮扶救助为引导，着力强化关心关爱职工；以工会建家活动为载体，着力加强“三园、五小”改造建设；以职工文体活动为抓手，着力激发职工参与企业文化建设的积极性。集团公司企业凝聚力得到有效提升，职工主人翁责任感、归属感、感恩心得到有效增强。
                 </span>
               </p>
             </div>
@@ -87,7 +87,7 @@
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
             <audio id="audio-js"  class="audio-js">
-              <source src="audios/party/8职工之家.ogg" type="audio/ogg" />
+              <source src="audios/zhigong/职工之家.ogg" type="audio/ogg" />
             </audio>
           </div>
         </div>
