--- a/1_1_zhigong2.html
+++ b/1_1_zhigong2.html
@@ -37,7 +37,7 @@
 
             <div class=" bodypart">
               <p class="desc typing-ani">
-                <span class="text">集团工会坚持抓好职工帮扶救助制度的落实，积极主动关心关爱困难职工，把组织的关怀及时呈送到困难职工家中。
+                <span class="text">集团公司工会坚持以高度的政治责任感和责任心，坚决落实职工帮扶救助制度。积极开展困难职工节日走访慰问，及时主动关心关爱困难职工。冬送温暖，夏送清凉，稳步推进职工健康体检和健康休养，把组织的关怀第一时间呈送到职工群众的手中。
                 </span>
               </p>
             </div>
@@ -91,7 +91,7 @@
           <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
           <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
           <audio id="audio-js"  class="audio-js">
-            <source src="audios/party/10帮扶救助.ogg" type="audio/ogg" />
+            <source src="audios/zhigong/帮扶救助.ogg" type="audio/ogg" />
           </audio>
         </div>
       </div>
