--- a/1_1_zhigong4.html
+++ b/1_1_zhigong4.html
@@ -37,7 +37,7 @@
 
                     <div class=" bodypart">
                         <p class="desc typing-ani">
-                <span class="text">集团工会坚持依靠职工办企业方针，认真抓好职代会、对话会和职工代表视察制度的落实，对集团改革和经营发展重大政策措施积极征求职工群众的意见，充分尊重职工群众的知情权、参与权、表达权和监督权，不断拓展民主管理、民主监督的渠道和方法。
+                <span class="text">集团公司工会坚持依靠职工办企业方针，认真抓好职代会、对话会和职工代表视察工作，充分尊重职工群众的知情权、参与权、表达权和监督权，不断拓展民主管理、民主监督的渠道和方法，积极征求职工群众对集团改革和经营发展重大决策的意见，为促进集团公司各项工作有序开展起到了重要的推动作用。
                 </span>
                         </p>
                     </div>
@@ -123,7 +123,7 @@
                 <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up"
                                                                                   aria-hidden="true"></span> </a>
                 <audio id="audio-js" class="audio-js">
-                    <source src="audios/party/9民主监督.ogg" type="audio/ogg"/>
+                    <source src="audios/zhigong/民主监督.ogg" type="audio/ogg"/>
                 </audio>
             </div>
         </div>
