--- a/1_1_zhigong5.html
+++ b/1_1_zhigong5.html
@@ -37,7 +37,7 @@
 
             <div class=" bodypart">
               <p class="desc typing-ani">
-                <span class="text">集团工会充分发挥联系职工的纽带作用，积极组织开展“安康杯”球类比赛、“才艺大赛”等职工喜闻乐见的活动，丰富职工业余文化生活，达到凝心聚力，推动企业文化突破发展的目的。
+                <span class="text">集团公司工会坚持把企业文化建设作为凝心聚力的抓手，不断充实企业文化内涵和外延的品牌符号，积极组织开展“读书月”、“安康杯”、“徒步大会”“三八才艺大赛”等形式多样、丰富多彩的文体生活，打造具有铁越特色的企业文化亮点，展示了“铁越人”劈波斩浪、朝气蓬勃的精神风貌。
                 </span>
               </p>
             </div>
@@ -107,7 +107,7 @@
           <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
           <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
           <audio id="audio-js"  class="audio-js">
-            <source src="audios/party/12文体活动.ogg" type="audio/ogg" />
+            <source src="audios/zhigong/文体活动.ogg" type="audio/ogg" />
           </audio>
         </div>
       </div>
