--- a/1_1_zhigong6.html
+++ b/1_1_zhigong6.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class=" bodypart">
                         <p class="desc typing-ani">
-                <span class="text">集团工会不断加大对“五小”“三园”建设的投资和管理力度，共完成“五小”“三园”改造及建设项目上百个，实现全覆盖成规模，让职工切实受益。
+                <span class="text">集团公司工会坚持“工会建家职工受益”的原则，不断加大对“五小”、“三园”建设的投入和管理力度，在集团公司的大力支持下，共完成改造建设项目上百个，实现集团公司“五小”、“三园”全覆盖成规模，为职工营造了温馨的家园，使职工共享到企业转型发展的成果。
                 </span>
                         </p>
                     </div>
@@ -187,7 +187,7 @@
                 <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up"
                                                                                   aria-hidden="true"></span> </a>
                 <audio id="audio-js" class="audio-js">
-                    <source src="audios/party/11五小三园建设.ogg" type="audio/ogg"/>
+                    <source src="audios/zhigong/五小三园建设.ogg" type="audio/ogg"/>
                 </audio>
             </div>
         </div>
