--- a/1_1_jiandang5.html
+++ b/1_1_jiandang5.html
@@ -15,7 +15,7 @@
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div class="page  tdc-detail">
+  <div class="page jiandang5 tdc-detail">
     <div class="container">
       <div class="logo"> <img src="./images/tdc_logo.png"> </div>
       <div class="row" id="zlogo">
@@ -37,7 +37,7 @@
 
             <div class=" bodypart">
               <p class="desc typing-ani">
-                <span class="text">集团党委坚持用“三严三实”的要求规范和约束行为，用专项巡察问题警示自己，着力推进“两学一做”学习教育，坚持从严从实、突出效果，党员干部作风进一步转变。
+                <span class="text">集团公司党委坚持用“两学一做”学习教育为牵动，用“三严三实”的要求规范和约束行为，用专项巡察问题整改警示自己，着力推进党员干部作风建设。以“八项规定”为基准，从严从实带队伍；以“四种精神”为导向，严格自律讲担当；以示范党课为引领，立标打样树典型；以“三重一大”为规范，着力提高领导班子决策和党委会抓大事、议大事的能力水平。
                 </span>
               </p>
             </div>
@@ -90,7 +90,7 @@
           <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
           <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
           <audio id="audio-js"  class="audio-js">
-            <source src="audios/party/4作风建设.ogg" type="audio/ogg" />
+            <source src="audios/zhigong/作风建设.ogg" type="audio/ogg" />
           </audio>
         </div>
       </div>
