--- a/1_1_jiandang7.html
+++ b/1_1_jiandang7.html
@@ -15,7 +15,7 @@
     <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<div class="page  tdc-detail">
+<div class="page jiandang7 tdc-detail">
     <div class="container">
         <div class="logo"><img src="./images/tdc_logo.png"></div>
         <div class="row" id="zlogo">
@@ -37,7 +37,7 @@
 
                     <div class=" bodypart">
                         <p class="desc typing-ani">
-                <span class="text">集团党委不断加强思想教育工作、文化引领工作和舆论调控工作，形成强大的思想正能量，凝聚改革发展攻坚合力。
+                <span class="text">集团公司党委坚持把宣传思想工作的重心下沉到一线，把解决职工思想问题与解决职工生产生活实际问题相结合，积极开展形势任务宣讲，编辑《企业文化手册》、《铁越通讯》等宣传媒介，制作集团公司宣传片，持续开展每月一课培训，不断加强思想教育、文化引领和舆论调控工作，用文化的力量推动企业管理，凝聚职工转型发展的攻坚合力。
                 </span>
                         </p>
                     </div>
@@ -119,7 +119,7 @@
                 <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up"
                                                                                   aria-hidden="true"></span> </a>
                 <audio id="audio-js" class="audio-js">
-                    <source src="audios/party/5宣传文化建设.ogg" type="audio/ogg"/>
+                    <source src="audios/zhigong/宣传文化建设.ogg" type="audio/ogg"/>
                 </audio>
             </div>
         </div>
