党组织架构 修改了图

--- a/1_1_jiandang2.html
+++ b/1_1_jiandang2.html
@@ -35,7 +35,7 @@
               
             </div>
             <div style="width:100%;text-align:center">
-              <img src="./images/jiandang/djgimg_03.png" style="width:80%;margin-top:80px;">
+              <img src="./images/jiandang/dangwei.png" style="width:80%; height:60%; margin-top:30px;">
             </div>
           </div>
 
