调整金桥北、北站停车场文字，音频

--- a/tss_12.html
+++ b/tss_12.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>资产运营</title>
+    <title>北站停车场</title>
     <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
@@ -32,11 +32,11 @@
                 <div class="col-md-3 leftpart">
                     <div class="titlepart">
                         <h3>资产运营</h3>
-                        
+
                     </div>
                     <div class=" bodypart">
                         <p class="desc typing-ani">
-                <span class="text">集团自有土地及房屋资源达200余万平方米，资产运营业务覆盖大连、营口两市。
+                <span class="text">位于大连市甘井子区华北路北侧，大连北站西侧，占地面积8万平方米。该项目是大连铁越集团利用铁路闲置资产改造开发的物流仓储项目，现与东风日产、雷克萨斯、丰田、本田等7家4S店合作经营汽车仓储服务业务。
                 </span>
                         </p>
                     </div>
