--- a/tdc_5.html
+++ b/tdc_5.html
@@ -36,7 +36,7 @@
                     </div>
                     <div class=" bodypart">
                         <p class="desc typing-ani">
-                <span class="text">位于大连市开发区钢铁路9号，包括1.2万平方米的金桥汽车配件物流园区、首创1万平方米的多功能移动推拉库，为鞍钢蒂森克虏伯钢厂、东风日产等企业提供优质的物流服务，打造与国际接轨的专业化第三方物流品牌。
+                <span class="text">位于大连市开发区东民路10号，金桥站北基地内，占地面积6万平方米。园区现有铁路专用线1条，钢结构库房3座，合计10000平方米。库内还设有16吨滑行吊车1台，20吨展翼车2台。目前与大连悦峰国际物流有限公司合作经营汽车零部件仓储、配送服务业务。
                 </span>
                         </p>
                     </div>
