添加旗帜引领音频，文字

--- a/1_1_jiandang1.html
+++ b/1_1_jiandang1.html
@@ -12,7 +12,7 @@
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div class="page tdc">
+  <div class="page jiandang1 tdc">
     <div class="container">
       <div class="logo"> <img src="./images/tdc_logo.png"> </div>
       <div class="row" id="zlogo">
@@ -27,7 +27,8 @@
         <div class="titlepart2">
                     <h3>旗帜引领</h3>
             </div>
-            <p class="half-p">集团公司党委认真贯彻党的十八大精神，用“四个全面”战略布局统一思想，全面落实从严治党要求， 紧密围绕“两学一做”学习教育和局党委、路局的工作部署，加强党的思想、组织、作风、廉政和文化建设，突出抓好党建责任制的落实、抓好班子作风能力的强化、抓好队伍整体素质的提升，为确保实现集团公司转型发展目标提供坚强有力的政治保证。</p>
+            <p class="half-p">集团公司党委认真贯彻党的十九大精神，全面落实从严治党要求， 紧密围绕“两学一做”学习教育和局党委、路局的工作部署，加强党的思想、组织、作风、廉政和文化建设，突出抓好党建责任制的落实、抓好领导班子作风能力的强化、抓好领导队伍整体素质的提升，为确保实现集团公司转型发展目标提供坚强有力的政治保证。
+            </p>
             </div>
         <div class="half-height" style="    width: 1200px;margin: auto;">
 
@@ -64,14 +65,20 @@
 
     </div>
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-      <div class="container">
-        <div class="row" >
-          <div class="col-md-10"></div>
-          <div class="col-md-1">
-            <a class="back_btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回</a>
-          </div>
-          <div class="col-md-1">
-            <a class="back-home-btn ctl_btn" href="index.html"> 首页 </a>
+      <div class="container" style="position:relative;">
+        <div class="col-md-3 leftpart">
+
+        </div>
+
+        <div class="col-md-9 rightpart" >
+          <div class="pull-right">
+            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
+            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
+            <a class="play-inner-audio-btn play-audio-btn audio-off ctl_btn" href="javascript:void(0);"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
+              <audio id="audio-js" autoplay="true"  class="audio-js">
+                <source src="audios/zhigong/旗帜引领.ogg" type="audio/ogg" />
+              </audio>
+            </a>
           </div>
         </div>
       </div>
