文化体系-第二次修改

--- a/culture_3.html
+++ b/culture_3.html
@@ -103,7 +103,7 @@
 
     <div id="modal-1" class="modal fade culture" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
+            <div class="modal-content" style="">
                 <h4 class="modal-title">企业愿景</h4>
                 <div class="modal-body">
                     <h5>融入区域经济，发挥行业优势，创建铁路一流现代物流企业 </h5>
