联系我们-二维码OK

--- a/profile_2.html
+++ b/profile_2.html
@@ -1,83 +1,101 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:font-size="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>联系我们</title>
-    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
 
-    <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-    <div class="page profile2 tdc-detail">
-        <div class="container">
-			<div class="logo"> <img src="./images/tdc_logo.png"> </div>
-			<div class="row" id="zlogo">
-				<div class="col-md-4"></div>
-				<div class="col-md-4"><img src="./images/timg_03.png"></div>
-				<div class="col-md-4"></div>
-			</div>
+<div class="page profile2 tdc-detail">
+    <div class="container">
+        <div class="logo"><img src="./images/tdc_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/timg_03.png"></div>
+            <div class="col-md-4"></div>
         </div>
+    </div>
 
-        <div class="main">
- 			<div class="main-content">
+    <div class="main">
+        <div class="main-content">
 
-			  <div class="row" id="wlsp">
-			  	<div class="col-md-3">
-			  	</div>
-				<div class="col-md-6" style="margin-top:10%;">
-					<div class="titlepart" style="width:30%;">
-					   <h3>联系我们</h3>
-					</div>
-					<br><br><br><br>
-					<div style="margin-left: auto; 				/* 左侧边界自动显示 */
-								margin-right: auto; 				/* 右侧边界自动显示 */
-								border: 1px solid;
-								color: #f00;
-								height: 110px;
-								margin-bottom: 0px;">
-						<img style="width: auto" src="images/profile/ewm.jpg" >
-						<img style="width: auto" src="images/profile/ewm.jpg" >
-						<img style="width: auto" src="images/profile/ewm.jpg" >
-						<img style="width: auto" src="images/profile/ewm.jpg" >
-						<img style="width: auto" src="images/profile/ewm.jpg" >
-						<img style="width: auto" src="images/profile/ewm.jpg" >
-					</div>
+            <div class="row" id="wlsp">
+                <div class="col-md-3">
+                </div>
+                <div class="col-md-6" style="margin-top:10%;">
+                    <div class="titlepart" style="width:30%;">
+                        <h3>联系我们</h3>
+                    </div>
+                    <br><br><br><br>
+                    <div style="/*margin-left: auto;*/ 				/* 左侧边界自动显示 */
+                                /*margin-right: auto; */				/* 右侧边界自动显示 */
+                                /*border: 1px solid;*/
+                                /*color: #f00;*/
+                                height: 110px;
+                                width: 110%;">
+                        <div align="center" style="width: 16.66%;float: left;">
+                            <img style="height: 90%;width: 90%;" src="images/profile/集团公众号.png">
+                            <p style="text-align: center;font-size: 8px;color: white;margin-top: 4px;">集团公众号</p>
+                        </div>
+                        <div align="center" style="width: 16.66%;float: left;">
+                            <img style="height: 90%;width: 90%;" src="images/profile/大连城配中心公众账号.png">
+                            <p style="text-align: center;font-size: 8px;color: white;margin-top: 4px;">大连城配中心公众号</p>
+                        </div>
+                        <div align="center" style="width: 16.66%;float: left;">
+                            <img style="height: 90%;width: 90%;" src="images/profile/铁道1896.png">
+                            <p style="text-align: center;font-size: 8px;color: white;margin-top: 4px;">铁道1896公众号</p>
+                        </div>
+                        <div align="center" style="width: 16.66%;float: left;">
+                            <img style="height: 90%;width: 90%;" src="images/profile/尚品槐花公众账号.png">
+                            <p style="text-align: center;font-size: 8px;color: white;margin-top: 4px;">尚品槐花公众号</p>
+                        </div>
+                        <div align="center" style="width: 16.66%;float: left;">
+                            <img style="height: 90%;width: 90%;" src="images/profile/大连养老院公众账号.png">
+                            <p style="text-align: center;font-size: 8px;color: white;margin-top: 4px;">大连疗养院公众号</p>
+                        </div>
+                        <div align="center" style="width: 16.66%;float: left;">
+                            <img style="height: 90%;width: 90%;" src="images/profile/熊岳城疗养院公众账号.png">
+                            <p style="text-align: center;font-size: 8px;color: white;margin-top: 4px;">熊岳城疗养院公众号</p>
+                        </div>
+                    </div>
 
-					<div class="dizhi" style="margin-top: 0px;	font-size: 50px;">
-					<b>联系电话：0411-62831289</b>
-					<br>
-					<b>地&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp址：辽宁省大连市中山区安民街11号</b>
-				</div>
+                    <div class="dizhi" style="margin-top: 0px;	font-size: 50px;">
+                        <b>联系电话：0411-62831289</b>
+                        <br>
+                        <b>地&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp址：辽宁省大连市中山区安民街11号</b>
+                    </div>
 
 
-				</div>
-				<div class="col-md-3">
-			  	</div>
+                </div>
+                <div class="col-md-3">
+                </div>
 
 
-			</div>
-	    </div>
-		<nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-		  <div class="content">
-        <div class="col-md-3 leftpart">
-			  </div>
-        <div class="col-md-9 rightpart" >
-  				<div class="pull-right">
-            <a class="back-btn ctl_btn" href="1_profile.html?noaudio=1"> 返回 </a>
-  				  <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-  				</div>
-			  </div>
- 		  </div>
-		</nav>
+            </div>
+        </div>
+        <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
+            <div class="content">
+                <div class="col-md-3 leftpart">
+                </div>
+                <div class="col-md-9 rightpart">
+                    <div class="pull-right">
+                        <a class="back-btn ctl_btn" href="1_profile.html?noaudio=1"> 返回 </a>
+                        <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                    </div>
+                </div>
+            </div>
+        </nav>
 
-</div>
+    </div>
     <script src="Scripts/jquery-1.9.1.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
 
