--- a/tdc_6.html
+++ b/tdc_6.html
@@ -53,29 +53,26 @@
                                 <!--<a href="images/tdc6/i5.jpg" data-lightbox="lightbox"><img-->
                                 <!--src="./images/tdc6/i5.jpg" class=""-->
                                 <!--style="height: 468px"></a>-->
-                                <div class="height-2-3">
+                                <div class="height-2-3" style="padding-bottom: 8px;">
                                     <a href="images/tdc6/i2.jpg" data-lightbox="lightbox"><img
                                     src="./images/tdc6/dimg_03-2.png" class=""
-                                    style="width:100%;padding-bottom: 8px;"></a>
+                                    style="height:100%;"></a>
                                 </div>
-                                <div class="height-1-3">
+                                <div class="height-1-3" style="padding-top: 8px;">
                                     <div class="width-1-3">
-                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
-                                            没有<br>图片
-                                        </div></span>
+                                        <a href="images/tdc6/d-01.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tdc6/tdc6-01.png" class=""
+                                        style="width:100%;padding: 0 8px 0 0;"></a>
                                     </div>
                                     <div class="width-1-3">
-                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
-                                            没有<br>图片
-                                        </div></span>
+                                        <a href="images/tdc6/d-02.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc6/tdc6-02.png" class=""
+                                                style="width:100%;padding: 0 8px 0 8px;"></a>
                                     </div>
                                     <div class="width-1-3">
-                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
-                                            没有<br>图片
-                                        </div></span>
+                                        <a href="images/tdc6/d-03.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc6/tdc6-03.png" class=""
+                                                style="padding: 0 0 0 8px;"></a>
                                     </div>
                                 </div>
                             </div>
@@ -84,43 +81,31 @@
                                 <div class="height-1-3" style="padding: 0 0 8px 0">  <!--右第一行-->
                                     <div class="row-1-2-left">
                                         <a href="images/tdc6/i3.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tdc6/i3.jpg" class="img-fullh"
+                                                src="./images/tdc6/tdc6-07.png" class=""
                                                 style=" "></a>
                                     </div>
                                     <div class="row-1-2-right">
-                                        <!--<a href="images/tdc6/i3.jpg" data-lightbox="lightbox"><img-->
-                                                <!--src="./images/tdc6/i3.jpg" class="img-fullh"-->
-                                                <!--style=""></a>-->
-                                         <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
-                                            没有<br>图片
-                                        </div></span>
+                                        <a href="images/tdc6/d-04.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc6/tdc6-04.png" class=""
+                                                style=""></a>
                                     </div>
                                 </div>
                                 <div class="height-1-3" style="padding: 8px 0">  <!--右第二行-->
                                     <div class="row-1-2-left">
-                                        <!--<a href="images/tdc6/i6.jpg" data-lightbox="lightbox"><img-->
-                                                <!--src="./images/tdc6/i6.jpg" class="img-fullh"-->
-                                                <!--style=""></a>-->
-                                         <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
-                                            没有<br>图片
-                                        </div></span>
+                                        <a href="images/tdc6/d-05.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc6/tdc6-05.png" class=""
+                                                style="margin-bottom: -110px;"></a>
                                     </div>
                                     <div class="row-1-2-right">
-                                        <!--<a href="images/tdc6/i2.jpg" data-lightbox="lightbox"><img-->
-                                                <!--src="./images/tdc6/i2.jpg" class="img-fullh"-->
-                                                <!--style=""></a>-->
-                                         <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
-                                            没有<br>图片
-                                        </div></span>
+                                        <a href="images/tdc6/d-06.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc6/tdc6-06.png" class=""
+                                                style=""></a>
                                     </div>
                                 </div>
                                 <div class="height-1-3" style="padding: 8px 0 0 0;">  <!--右第3行-->
                                         <a href="images/tdc6/i1.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tdc6/i1.jpg" class="img-fullw"
-                                                style=""></a>
+                                                src="./images/tdc6/tdc6-08.png" class=""
+                                                style="padding-top: -10px;"></a>
                                 </div>
                             </div>
 
