周水子钢材市场+播放大图

--- a/tdc_6.html
+++ b/tdc_6.html
@@ -110,27 +110,6 @@
                             </div>
 
 
-                            <!--<div class=" row-1-2-left">-->
-                                <!--<a href="images/tdc6/i1.jpg" data-lightbox="lightbox"><img-->
-                                        <!--src="./images/tdc6/i1.jpg" class="img-fullh"> </a>-->
-                            <!--</div>-->
-                            <!--<div class="row-1-2-right">-->
-                                <!--<div class="col-1-2-top">-->
-                                    <!--<a href="images/tdc6/i2.jpg" data-lightbox="lightbox"><img-->
-                                            <!--src="./images/tdc6/i2.jpg"> </a>-->
-                                <!--</div>-->
-                                <!--<div class="col-1-2-bottom">-->
-                                    <!--<div class=" row-1-2-left">-->
-                                        <!--<a href="images/tdc6/i3.jpg" data-lightbox="lightbox"><img-->
-                                                <!--src="./images/tdc6/i3.jpg" class="img-fullh"> </a>-->
-                                    <!--</div>-->
-                                    <!--<div class="row-1-2-right">-->
-                                        <!--<a href="images/tdc6/i4.jpg" data-lightbox="lightbox"><img-->
-                                                <!--src="./images/tdc6/i4.jpg" class="img-fullh"> </a>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</div>-->
-
                         </div>
                         <div class="swiper swiper-container">
                             <div class="swiper-wrapper">
@@ -138,7 +117,11 @@
                                 <div class="swiper-slide"><img src="images/tdc6/i2.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tdc6/i3.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tdc6/i4.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tdc6/i1.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc6/d-01.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc6/d-02.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc6/d-04.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc6/d-05.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc6/d-06.jpg"></div>
                             </div>
                         </div>
 
