--- a/tdc_7.html
+++ b/tdc_7.html
@@ -48,34 +48,27 @@
                         <div class="grid" style="display:none;">
 
                             <div class="col2-60b-left">
-                                <div class="height-1-3">
+                                <div class="height-1-3" style="padding-bottom: 8px;">
                                     <div class="width-1-3">
-                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
-                                            没有<br>图片
-                                        </div></span>
+                                        <a href="images/tdc7/d-01.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tdc7/tdc-01.png" class=""
+                                        style="height:100%; padding: 0 8px 0 0;"></a>
                                     </div>
                                     <div class="width-1-3">
-                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
-                                            没有<br>图片
-                                        </div></span>
+                                        <a href="images/tdc7/d-02.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc7/tdc-02.png" class=""
+                                                style="height:100%; padding: 0 8px 0 8px;"></a>
                                     </div>
                                     <div class="width-1-3">
-                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
-                                            没有<br>图片
-                                        </div></span>
+                                        <a href="images/tdc7/d-03.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc7/tdc-03.png" class=""
+                                                style="height:100%; padding: 0 0 0 8px;"></a>
                                     </div>
                                 </div>
-                                <div class="height-2-3">
-                                    <!--<a href="images/tdc7/i2.jpg" data-lightbox="lightbox"><img-->
-                                            <!--src="./images/tdc7/dimg_03-2.png" class=""-->
-                                            <!--style="width:100%;padding-bottom: 8px;"></a>-->
-                                      <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
-                                            没有<br>图片
-                                        </div></span>
+                                <div class="height-2-3" style="padding-top: 8px;">
+                                    <a href="images/tdc7/d-04.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tdc7/tdc-04.png" class=""
+                                            style="height:100%;"></a>
                                 </div>
                             </div>
 
@@ -96,29 +89,16 @@
                                             style=""></a>
                                 </div>
                             </div>
-
-
-                            <!--<div class="col-1-2-top">-->
-                                <!--<a href="images/tdc7/i1.jpg" data-lightbox="lightbox"><img-->
-                                        <!--src="./images/tdc7/gimg_03.png"></a>-->
-                            <!--</div>-->
-                            <!--<div class="col-1-2-bottom">-->
-                                <!--<div class="row-1-2-left">-->
-                                    <!--<a href="images/tdc7/i2.jpg" data-lightbox="lightbox"><img-->
-                                            <!--src="./images/tdc7/gimg_06.png" class=""></a>-->
-                                <!--</div>-->
-                                <!--<div class="row-1-2-right">-->
-                                    <!--<a href="images/tdc7/i3.jpg" data-lightbox="lightbox"><img-->
-                                            <!--src="./images/tdc7/gimg_08.png" class=""></a>-->
-                                <!--</div>-->
-                            <!--</div>-->
-
                         </div>
                         <div class="swiper swiper-container">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide"><img src="images/tdc7/i1.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tdc7/i2.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tdc7/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc7/d-01.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc7/d-02.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc7/d-03.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc7/d-04.jpg"></div>
                             </div>
                         </div>
 
