--- a/tss_6.html
+++ b/tss_6.html
@@ -84,15 +84,9 @@
 
                             <div class="width-1-5" style=""> <!--右边20%-->
                                 <div class="height-1-4" style="padding:0 0 8px 0;">  <!--右第一行-->
-                                    <!--<a href="images/tss6/i5.jpg" data-lightbox="lightbox"><img-->
-                                            <!--src="./images/tss6/i5.jpg" class="img-fullh"-->
-                                            <!--style=" "></a>-->
-
-                                      <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
-                                            没有<br>图片
-                                        </div></span>
-
+                                    <a href="images/tss6/d-01.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tss6/tss-06.png" class="img-fullw"
+                                            style=" "></a>
                                 </div>
                                 <div class="height-1-4" style="padding:0;">  <!--右第一行-->
                                     <a href="images/tss6/i9.jpg" data-lightbox="lightbox"><img
