--- a/tss_13.html
+++ b/tss_13.html
@@ -58,22 +58,22 @@
                                 <div class="height-1-4"> <!--左边上25%-->
                                     <div class="width-1-4" style="padding:0 8px 8px 0;"> <!--左上3列-->
                                         <a href="images/tss13/i8.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss13/img13_08.png" class="img-fullh"
+                                                src="./images/tss13/img13_08.png" class=""
                                                 style=""></a>
                                     </div>
                                     <div class="width-1-4" style="padding:0 8px 8px 0;"> <!--左上3列-->
                                         <a href="images/tss13/i10.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss13/img13_10.png" class="img-fullh"
+                                                src="./images/tss13/img13_10.png" class=""
                                                 style="width-1-4"></a>
                                     </div>
                                     <div class="width-1-4" style="padding:0 8px 8px 0;"> <!--左上3列-->
                                         <a href="images/tss13/i13.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss13/img13_13.png" class="img-fullh"
+                                                src="./images/tss13/img13_13.png" class=""
                                                 style="width-1-4"></a>
                                     </div>
                                     <div class="width-1-4" style="padding:0 8px 8px 0;">
                                         <a href="images/tss13/i3.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss13/img13_03.png" class="img-fullh"
+                                                src="./images/tss13/img13_03.png" class=""
                                                 style="width-1-4 float: right;"></a>
                                     </div>
                                 </div>
@@ -87,39 +87,24 @@
                             <div class="width-1-5" style=""> <!--右边20%-->
                                 <div class="height-1-4" style="padding:0 0 8px 0;">  <!--右第一行-->
                                     <a href="images/tss13/i5.jpg" data-lightbox="lightbox"><img
-                                            src="./images/tss13/img13_05.png" class="img-fullh"
+                                            src="./images/tss13/img13_05.png" class=""
                                             style=" "></a>
                                 </div>
                                 <div class="height-1-4" style="padding:0;">  <!--右第一行-->
-                                    <!--<a href="images/tss13/i8.jpg" data-lightbox="lightbox"><img-->
-                                    <!--src="./images/tss13/i8.jpg" class="img-fullh"-->
-                                    <!--style=" "></a>-->
-
-                                    <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
-                                        没有<br>图片
-                                    </div></span>
+                                    <a href="images/tss13/d-01.jpg" data-lightbox="lightbox"><img
+                                    src="./images/tss13/tss-01.png" class=""
+                                    style=" "></a>
 
                                 </div>
                                 <div class="height-1-4" style="padding:8px 0 0 0;">  <!--右第一行-->
-                                    <!--<a href="images/tss13/i9.jpg" data-lightbox="lightbox"><img-->
-                                            <!--src="./images/tss13/i9.jpg" class=" img-fullh"-->
-                                            <!--style=""></a>-->
-                                    <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
-                                            没有<br>图片
-                                        </div></span>
-
+                                    <a href="images/tss13/d-02.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tss13/tss-02.png" class=" "
+                                            style=""></a>
                                 </div>
                                 <div class="height-1-4" style="padding:8px 0 0 0;">  <!--右第一行-->
-                                    <!--<a href="images/tss13/i7.jpg" data-lightbox="lightbox"><img-->
-                                            <!--src="./images/tss13/i7.jpg" class="img-fullh"-->
-                                            <!--style=""></a>-->
-                                    <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
-                                            没有<br>图片
-                                        </div></span>
-
+                                    <a href="images/tss13/d-03.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tss13/tss-03.png" class=""
+                                            style=""></a>
                                 </div>
                             </div>
 
@@ -131,7 +116,9 @@
                                 <div class="swiper-slide"><img src="images/tss13/i5.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss13/i8.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss13/i10.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tss13/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss13/d-01.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss13/d-02.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss13/d-03.jpg"></div>
                             </div>
                         </div>
                     </div>
