出租车公司

--- a/tss_11.html
+++ b/tss_11.html
@@ -53,32 +53,20 @@
                                 <a href="images/tss11/i6.jpg" data-lightbox="lightbox"><img
                                         src="./images/tss11/i6_s.jpg" class="img-fullw" style=""></a>
                             </div>
-                            <div class="width-1-3" style="padding: 0  0  0 5px;">
 
+                            <div class="width-1-3" style="padding: 0  0  0 5px;">
                                 <div class="width-1-2">
                                     <div class="height-1-3">
-                                        <!--<a href="images/tss11/i1.jpg" data-lightbox="lightbox">-->
-                                            <!--<img src="./images/tss11/i1.jpg" style="height:100%;width:auto;padding-bottom: 8px;"></a>-->
-                                     <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 95%; width: 95%;">
-                                            修改<br>比例
-                                        </div></span>
+                                        <a href="images/tss11/i1.jpg" data-lightbox="lightbox">
+                                            <img src="./images/tss11/tss-01.png" style="height:100%;padding: 0 8px 8px 0"></a>
                                     </div>
                                     <div class="height-1-3">
-                                        <!--<a href="images/tss11/i2.jpg" data-lightbox="lightbox"><img-->
-                                                <!--src="./images/tss11/i2_s.jpg" style="height:100%;width:auto;padding: 0 18px 8px 0"></a>-->
-                                         <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 95%; width: 95%;">
-                                            修改<br>比例
-                                        </div></span>
+                                        <a href="images/tss11/i2.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss11/tss-02.png" style="height:100%;padding: 0 8px 8px 0;"></a>
                                     </div>
                                     <div class="height-1-3">
-                                        <!--<a href="images/tss11/i3.jpg" data-lightbox="lightbox"><img-->
-                                        <!--src="./images/tss11/i3_s.jpg" style="height:100%;width:auto;"></a>-->
-                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 95%; width: 95%;">
-                                            没有<br>图片
-                                        </div></span>
+                                        <a href="images/tss11/d-03.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tss11/tss-03.png" style="height:100%;padding: 0 8px 0 0;"></a>
                                     </div>
                                 </div>
                                 <div class="width-1-2">
@@ -92,31 +80,10 @@
                                         src="./images/tss11/i9_s.jpg" style="height:100%;width:auto;padding-bottom: 8px;"></a>
                                     </div>
                                     <div class="height-1-3">
-                                        <!--<a href="images/tss11/i9.jpg" data-lightbox="lightbox"><img-->
-                                                <!--src="./images/tss11/i9_s.jpg" style="height:100%;width:auto;"></a>-->
-                                          <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 95%; width: 95%;">
-                                            没有<br>图片
-                                        </div></span>
+                                        <a href="images/tss11/d-04.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss11/tss-04.png" style="height:100%;width:auto;"></a>
                                     </div>
                                 </div>
-                                <!--<div style="width:50%; height:50%;  padding: 0 5px 5px  0;float:left;overflow:hidden;">-->
-                                    <!--<a href="images/tss11/i1.jpg" data-lightbox="lightbox"><img-->
-                                            <!--src="./images/tss11/i1.jpg" style="height:100%;width:auto;"></a>-->
-                                <!--</div>-->
-                                <!--<div style="width:50%; height:50%;  padding: 0 0 5px 5px;float:left;overflow:hidden;">-->
-                                    <!--<a href="images/tss11/i3.jpg" data-lightbox="lightbox"><img-->
-                                            <!--src="./images/tss11/i3_s.jpg" style="height:100%;width:auto;"></a>-->
-                                <!--</div>-->
-                                <!--<div style="width:50%; height:50%;  padding: 5px 5px 0 0;float:left;overflow:hidden;">-->
-                                    <!--<a href="images/tss11/i2.jpg" data-lightbox="lightbox"><img-->
-                                            <!--src="./images/tss11/i2_s.jpg" style="height:100%;width:auto;"></a>-->
-                                <!--</div>-->
-                                <!--<div style="width:50%; height:50%;  padding: 5px 0 0 5px;float:left;overflow:hidden;">-->
-                                    <!--<a href="images/tss11/i9.jpg" data-lightbox="lightbox"><img-->
-                                            <!--src="./images/tss11/i9_s.jpg" style="height:100%;width:auto;"></a>-->
-                                <!--</div>-->
-
                             </div>
                         </div>
 
