--- a/1_1_jiandang4.html
+++ b/1_1_jiandang4.html
@@ -53,8 +53,8 @@
                 <li><a href="images/jiandang4/i5.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_07.png"> </a> </li>
                 <li><a href="images/jiandang4/i6.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_09.png"> </a> </li>
 
-                <!--<li><a href="images/jiandang4/i3.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_15.png"> </a> </li>-->
-                <li>  <h1> <font color="#ff8c00"> 没有这个图片</font></h1></li>
+                <li><a href="images/jiandang4/i3.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jiandang-01.png"> </a> </li>
+
                 <li><a href="images/jiandang4/i4.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_17.png"> </a> </li>
                 <li><a href="images/jiandang4/i7.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_16.png"> </a> </li>
                 <li><a href="images/jiandang4/i8.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_18.png"> </a> </li>
