宣传文化建设-OK

--- a/1_1_jiandang7.html
+++ b/1_1_jiandang7.html
@@ -50,19 +50,17 @@
                         <div class="grid" style="display:none;">
                             <div class="width-4-5">
                                 <div class="col-1-2-top">
-                                    <!--<div class="width-1-2" style="padding:0 16px  0 0;"><a-->
-                                            <!--href="images/jiandang7/i1.jpg" data-lightbox="lightbox"><img-->
-                                            <!--src="./images/jiandang7/i1.jpg" class="img-fullh"> </a></div>-->
-                                    <div class="width-1-2" style="padding:0 16px  0 0;"><h1><font color="#ff8c00">没有图片</font></h1></div>
+                                    <div class="width-1-2" style="padding:0 16px  0 0;"><a
+                                            href="images/jiandang7/d-02.jpg" data-lightbox="lightbox"><img
+                                            src="./images/jiandang/jiandang-02.png" class="img-fullw"> </a></div>
                                     <div class="width-1-2" style="padding:0 16px  0 0;"><a
                                             href="images/jiandang7/i5.jpg" data-lightbox="lightbox"><img
                                             src="./images/jiandang7/i5.jpg" class="img-fullh"> </a></div>
                                 </div>
                                 <div class="col-1-2-bottom">
-                                    <!--<div class="width-1-2" style="padding:0 16px  0 0;"><a-->
-                                            <!--href="images/jiandang7/i7.jpg" data-lightbox="lightbox"><img-->
-                                            <!--src="./images/jiandang7/i7.jpg" class="img-fullh"> </a></div>-->
-                                    <div class="width-1-2" style="padding:0 16px  0 0;"><h1><font color="#ff8c00">没有图片</font></h1></div>
+                                    <div class="width-1-2" style="padding:0 16px  0 0;"><a
+                                            href="images/jiandang7/d-03.jpg" data-lightbox="lightbox"><img
+                                            src="./images/jiandang/jiandang-03.png" class="img-fulls"> </a></div>
                                     <div class="width-1-2" style="padding:0 16px  0 0;"><a
                                             href="images/jiandang7/i2.jpg" data-lightbox="lightbox"><img
                                             src="./images/jiandang7/i2.jpg" class="img-fullh"> </a></div>
@@ -91,6 +89,8 @@
                                 <div class="swiper-slide"><img src="images/jiandang7/i7.jpg"></div>
                                 <div class="swiper-slide"><img src="images/jiandang7/i3.jpg"></div>
                                 <div class="swiper-slide"><img src="images/jiandang7/i1.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiandang7/d-02.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiandang7/d-03.jpg"></div>
                             </div>
                         </div>
                     </div>
