调整大连铁越地产页面

--- a/1_1_jiandang2.html
+++ b/1_1_jiandang2.html
@@ -32,10 +32,10 @@
           <div class="col-md-12 leftpart">
             <div class="titlepart" style="width:25%">
               <h3>党组织架构</h3>
-              
+
             </div>
             <div style="width:100%;text-align:center">
-              <img src="./images/jiandang/dangwei.png" style="width:80%; height:60%; margin-top:30px;">
+              <img src="./images/jiandang/dangwei.png" style="width:78%; margin-top:30px;">
             </div>
           </div>
 
