--- a/1_1_jiandang8.html
+++ b/1_1_jiandang8.html
@@ -32,7 +32,7 @@
           <div class="col-md-3 leftpart">
             <div class="titlepart">
               <h3>典型示范</h3>
-              
+
             </div>
 
             <div class=" bodypart">
@@ -64,7 +64,7 @@
                     <div class="col-1-2-top">
                       <div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i3.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_05.png"> </a></div>
                       <!--<div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i2.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_15.png"> </a></div>-->
-                      <div class="width-1-3" style="padding: 0 16px 0 0"><h1> <font color="#ff8c00">没有图片</font> </h1> </div>
+                      <div class="width-1-3" style="padding: 0 16px 0 0"><a href="images/jiangdang8/i9.jpg" data-lightbox="lightbox" ><img src="./images/jiangdang8/i9.jpg" class="img-fullh"> </a></div>
                       <div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i3.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_05.png"> </a></div>
                     </div>
                     <div class="col-1-2-bottom">
@@ -79,10 +79,8 @@
                   <div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/jiangdang8/i2.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_15.png"> </a></div>
                   <div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/jiangdang8/i5.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_16.png"> </a></div>
                   <div class="width-1-5">
-                    <!--<div class="col-1-2-top"><a href="images/jiangdang8/i7.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_18.png"> </a>-->
-                    <div class="col-1-2-top"><h1> <font color="#ff8c00">没有图片</font> </h1> </div>
-                    <!--<div class="col-1-2-bottom"><a href="images/jiangdang8/i4.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_21.png"> </a>-->
-                    <div class="col-1-2-bottom"><h1> <font color="#ff8c00">没有图片</font> </h1> </div>
+                    <div class="col-1-2-top"><a href="images/jiangdang8/i10.jpg" data-lightbox="lightbox" ><img src="./images/jiangdang8/i10.jpg" class="img-fullh"> </a></div>
+                    <div class="col-1-2-top"><a href="images/jiangdang8/i11.jpg" data-lightbox="lightbox" ><img src="./images/jiangdang8/i11.jpg" class="img-fullh"> </a></div>
                   </div>
                 </div>
               </div>
