调整锦州地产页面图片

--- a/try_1.html
+++ b/try_1.html
@@ -31,7 +31,7 @@
             <div class="row" id="wlsp">
                 <div class="col-md-3 leftpart">
                     <div class="titlepart">
-                        <h3>大连地铁<br/>房地产</h3>
+                        <h3>大连铁路<br/>房地产</h3>
 
                     </div>
 
