--- a/try_2.html
+++ b/try_2.html
@@ -50,65 +50,65 @@
 
                             <div class="width-4-5">
                                 <div class="height-3-4">
-                                    <div class="row-1-2-left">  <!--四幅图片左半部分-->
-                                        <div class="col-1-2-top">
+                                    <div class="width-1-2" style="padding-right: 16px;">  <!--四幅图片左半部分-->
+                                      <div class="height-1-2" style="padding: 0 0 8px 0;">
                                             <a href="images/try2/xtlimg_03.png" data-lightbox="lightbox"> <img
                                                     src="./images/try2/xtlimg_03.png" class="" style=""></a>
                                         </div>
-                                        <div class="col-1-2-bottom">
+                                        <div class="height-1-2" style="padding: 8px 0;">
                                             <a href="images/try2/xtlimg_05.png" data-lightbox="lightbox"> <img
-                                                    src="./images/try2/xtlimg_05.png" class="" style="height:100%; padding: 0 0 16px 0;"></a>
+                                                    src="./images/try2/xtlimg_05.png" class=""></a>
                                         </div>
 
                                     </div>
-                                    <div class="row-1-2-right">     <!--四幅图片右半部分-->
-                                        <div class="col-1-2-top">
+                                    <div class="width-1-2" style="padding-right: 16px;">     <!--四幅图片右半部分-->
+                                      <div class="height-1-2" style="padding: 0 0 8px 0;">
                                             <a href="images/try2/xtlimg_10.png" data-lightbox="lightbox"> <img
-                                                    src="./images/try2/xtlimg_10.png" class="" style="padding-right: 16px;"></a>
-                                        </div>
-                                        <div class="col-1-2-bottom">
+                                                    src="./images/try2/xtlimg_10.png" class=""></a>
+                                      </div>
+                                      <div class="height-1-2"  style="padding: 8px 0;">
                                             <a href="images/try2/xtlimg_12.png" data-lightbox="lightbox"> <img
-                                                    src="./images/try2/xtlimg_12.png" class="" style="height:100%; padding: 0 16px 16px 0;"></a>
-                                        </div>
+                                                    src="./images/try2/xtlimg_12.png" class=""></a>
+                                      </div>
                                     </div>
                                 </div>
                                 <div class="height-1-4">
-                                    <div class="width-1-4">
-                                        <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
-                                                src="./images/try2/timg.jpg" style="height:100%; padding-right: 16px;"></a>
+                                    <div class="width-1-4" style="padding: 8px 16px 0 0;">
+                                        <a href="images/try2/i6.jpg" data-lightbox="lightbox"> <img
+                                                src="./images/try2/i6.jpg" class="img-fullh" ></a>
                                     </div>
-                                    <div class="width-1-4">
+                                    <div class="width-1-4" style="padding: 8px 16px 0 0;">
                                         <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
-                                                src="./images/try2/timg.jpg" style="height:100%; padding-right: 16px;"></a>
+                                                src="./images/try2/timg.jpg" class="img-fullh"></a>
                                     </div>
-                                    <div class="width-1-4">
-                                        <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
-                                                src="./images/try2/timg.jpg" style="height:100%; padding-right: 16px;"></a>
+                                    <div class="width-1-4" style="padding: 8px 16px 0 0;">
+                                        <a href="images/try2/i8.jpg" data-lightbox="lightbox"> <img
+                                                src="./images/try2/i8.jpg"  class="img-fullh"></a>
                                     </div>
-                                    <div class="width-1-4">
-                                        <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
-                                                src="./images/try2/timg.jpg" style="height:100%; padding-right: 16px;"></a>
+                                    <div class="width-1-4" style="padding: 8px 16px 0 0;">
+                                        <a href="images/try2/i9.jpg" data-lightbox="lightbox"> <img
+                                                src="./images/try2/i9.jpg"  class="img-fullh" ></a>
                                     </div>
                                 </div>
 
                             </div>
 
                             <div class="width-1-5">
-                                <div class="height-1-4">
+                                <div class="height-1-4" style="padding: 0 0 8px 0;">
                                     <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
-                                            src="./images/try2/timg.jpg" style="height:100%; padding-bottom: 16px;"></a>
+                                            src="./images/try2/timg.jpg" class="img-fullh"></a>
                                 </div>
-                                <div class="height-1-4">
-                                    <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
-                                            src="./images/try2/timg.jpg" style="height:100%; padding: 0 0 16px 0;"></a>
+                                <div class="height-1-4" style="padding: 8px 0;">
+                                    <a href="images/try2/i12.jpg" data-lightbox="lightbox"> <img
+                                            src="./images/try2/i12.jpg" class="img-fullh"></a>
                                 </div>
-                                <div class="height-1-4">
-                                    <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
-                                            src="./images/try2/timg.jpg" style="height:100%; padding: 0 0 16px 0;"></a>
+                                <div class="height-1-4" style="padding: 8px 0;">
+                                    <a href="images/try2/i11.jpg" data-lightbox="lightbox"> <img
+                                            src="./images/try2/i11.jpg"  class="img-fullh"></a>
                                 </div>
-                                <div class="height-1-4">
-                                    <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
-                                            src="./images/try2/timg.jpg" style="height:100%;"></a>
+                                <div class="height-1-4" style="padding: 8px 0 0 0;">
+                                    <a href="images/try2/i10.jpg" data-lightbox="lightbox"> <img
+                                            src="./images/try2/i10.jpg"  class="img-fullh"></a>
                                 </div>
                             </div>
                             <!--<div class="row-1-2-left">  &lt;!&ndash;四幅图片左半部分&ndash;&gt;-->
