修正火车头体育场图片

--- a/tss_10.html
+++ b/tss_10.html
@@ -32,7 +32,6 @@
                 <div class="col-md-3 leftpart">
                     <div class="titlepart">
                         <h3>大连火车头<br>体育场</h3>
-                        
                     </div>
                     <div class=" bodypart">
                         <p class="desc typing-ani">
@@ -40,19 +39,16 @@
                   位于大连市中山区解放路7号，占地面积2.2万平方米地上标准八跑道体育场、2700个看台位、300平LED显示屏，地下2000平农贸市场和1200个停车位，为大连市民提供优质的文体服务。
                 </span>
                         </p>
-
                     </div>
-
                 </div>
                 <div class="col-md-9 rightpart">
                     <div class="titlepart">
-
 
                     </div>
                     <div id="image_list" class=" bodypart">
                         <div class="grid" style="display:none; height:100%;">
 
-                            <div class="col-1-4-top" style="padding: 0;"> <!--四分之一高度-->
+                            <div class="height-1-4" style="padding: 0;"> <!--四分之一高度-->
                                 <div class="width-1-5 i-col"> <!--左上3列--> <!--五分之一宽-->
                                     <a href="images/tss10/i2.jpg" data-lightbox="lightbox"><img
                                             src="./images/tss10/img10_05.png" class="img-fullh"
@@ -79,7 +75,7 @@
                                             style=""></a>
                                 </div>
                             </div>
-                            <div class="col-3-4-bottom">
+                            <div class="height-3-4" style="padding: 16px 0 0 0;">
                                 <div class="width-3-5  i-col" style=""> <!--左边60%-->
                                     <a href="images/tss10/i1.jpg" data-lightbox="lightbox"><img
                                             src="./images/tss10/i1.jpg" class="img-fullh"
